@@ -1,18 +1,21 @@
 package com.opencode.alumxbackend.jobposts.service;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.time.LocalDateTime;
+import java.util.List;
 import java.util.UUID;
 
 import org.springframework.stereotype.Service;
 
-import com.opencode.alumxbackend.common.exception.BadRequestException;
-import com.opencode.alumxbackend.common.exception.ForbiddenException;
-import com.opencode.alumxbackend.common.exception.ResourceNotFoundException;
+import com.opencode.alumxbackend.common.exception.Errors.BadRequestException;
+import com.opencode.alumxbackend.common.exception.Errors.ForbiddenException;
+import com.opencode.alumxbackend.common.exception.Errors.ResourceNotFoundException;
 import com.opencode.alumxbackend.jobposts.dto.JobPostRequest;
+import com.opencode.alumxbackend.jobposts.dto.JobPostResponse;
 import com.opencode.alumxbackend.jobposts.model.JobPost;
 import com.opencode.alumxbackend.jobposts.repository.JobPostRepository;
+import com.opencode.alumxbackend.users.model.User;
 import com.opencode.alumxbackend.users.repository.UserRepository;
 
 import lombok.RequiredArgsConstructor;
@@ -26,7 +29,14 @@ public class JobPostServiceImpl implements JobPostService{
     private final JobPostRepository jobPostRepository;
     private final UserRepository userRepository;
 
+    @Override
+    public List<JobPostResponse> getPostsByUser(Long userId) {
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new ResourceNotFoundException("User with id  not found " + userId));
 
+        List<JobPost> posts = jobPostRepository.findByUsernameOrderByCreatedAtDesc(user.getUsername());
+        return JobPostResponse.fromEntities(posts);
+    }
 
     @Override
     public JobPost createJobPost(JobPostRequest request) {
@@ -50,9 +60,9 @@ public class JobPostServiceImpl implements JobPostService{
 
 
                 try{
-                    new URL(url); // this will chck wether hte url is coorect
+                    URI.create(url).toURL(); // this will chck whether url is correct
                 }
-                catch(MalformedURLException e){
+                catch(IllegalArgumentException | MalformedURLException e){
                     throw new BadRequestException("invalid url: " + url);
                 }
             });
@@ -72,10 +82,10 @@ public class JobPostServiceImpl implements JobPostService{
     @Override
     public void deletePostByUser(Long userId, String postId) {
         var user = userRepository.findById(userId)
-                .orElseThrow(() -> new ResourceNotFoundException("User", "id", userId));
+                .orElseThrow(() -> new ResourceNotFoundException("User not found with the id " + userId));
 
         JobPost post = jobPostRepository.findById(postId)
-                .orElseThrow(() -> new ResourceNotFoundException("Post", "postId", postId));
+                .orElseThrow(() -> new ResourceNotFoundException("Post not found with postId " + postId));
 
         if (!post.getUsername().equals(user.getUsername())) {
             throw new ForbiddenException("User is not the owner of the post");
